# linglong

./: CMakeLists.txt
api/schema/: v1.yaml
apps/ll-builder/src/: main.cpp
apps/ll-cli/src/: main.cpp
apps/uab/header/src/: main.cpp
apps/uab/loader/src/: main.cpp
debian/: changelog
misc/: CMakeLists.txt
misc/lib/linglong/container/config.d/: 20-devices  30-host-ipc  40-xdg-runtime-dir
src/linglong/api/types/v1/: Generators.hpp  PackageInfo.hpp  PackageManager1SearchResult.hpp
src/linglong/builder/: linglong_builder.cpp
src/linglong/cli/: cli.cpp  cli.h  printer.cpp
src/linglong/package/: architecture.h  layer_dir.cpp  reference.cpp  version.cpp
src/linglong/package_manager/: package_manager.cpp  task.cpp  task.h
src/linglong/repo/: ostree_repo.cpp
src/linglong/runtime/: container_builder.cpp  container_builder.h
src/linglong/utils/error/: error.h
src/linglong/utils/serialize/: json.h
src/module/runtime/: app.cpp
tests/: CMakeLists.txt
tests/src/linglong/package/: reference_test.cpp
tools/: update-external.sh
